# web-scraper

./: Cargo.toml  README.md
go_browser/: Cargo.toml  build.rs  go.mod  go.sum
go_browser/go/: lib.go
go_browser/src/: lib.rs
src/: main.rs
src/api/: api.rs
src/scraper/: scraper.rs
