workspace = { members = ["go_browser"] }
[package]
name = "web-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
go_browser = { path = "./go_browser" }
reqwest = "0.11.23"
tokio = {version="1.35.1", features = ["full"] }
actix-web = "4"
serde = "1.0"
serde_json = "1.0"
